force-app/main/default/objects/Academic_Year__c/fields/Academic_Days__c.field-meta.xml
<CustomField>
    <fullName>Academic_Days__c</fullName>
    <formula>To_Date__c  -  From_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Academic Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>