force-app/main/default/objects/Academic_Year__c/fields/From_Year__c.field-meta.xml
<CustomField>
    <fullName>From_Year__c</fullName>
    <label>From Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>