force-app/main/default/objects/Academic_Year__c/fields/To_Year__c.field-meta.xml
<CustomField>
    <fullName>To_Year__c</fullName>
    <label>To Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>